@@ -1,1 +1,0 @@
-dri/usr/lib/${DEB_HOST_MULTIARCH}/libOpenVG.so.1* usr/lib/${DEB_HOST_MULTIARCH}
