@@ -1,1 +1,0 @@
-package-name-doesnt-match-sonames libOpenVG1
