@@ -1,94 +1,0 @@
-libOpenVG.so.1 libopenvg1-mesa #MINVER# | libopenvg1
- mapi_get_proc_address@Base 7.9~
- mapi_init@Base 7.9~
- mapi_table_create@Base 7.9~
- mapi_table_destroy@Base 7.9~
- mapi_table_fill@Base 7.9~
- mapi_table_make_current@Base 7.9~
- vgAppendPath@Base 7.8.1
- vgAppendPathData@Base 7.8.1
- vgChildImage@Base 7.8.1
- vgClear@Base 7.8.1
- vgClearGlyph@Base 7.10
- vgClearImage@Base 7.8.1
- vgClearPath@Base 7.8.1
- vgColorMatrix@Base 7.8.1
- vgConvolve@Base 7.8.1
- vgCopyImage@Base 7.8.1
- vgCopyMask@Base 7.10
- vgCopyPixels@Base 7.8.1
- vgCreateFont@Base 7.10
- vgCreateImage@Base 7.8.1
- vgCreateMaskLayer@Base 7.10
- vgCreatePaint@Base 7.8.1
- vgCreatePath@Base 7.8.1
- vgDestroyFont@Base 7.10
- vgDestroyImage@Base 7.8.1
- vgDestroyMaskLayer@Base 7.10
- vgDestroyPaint@Base 7.8.1
- vgDestroyPath@Base 7.8.1
- vgDrawGlyph@Base 7.10
- vgDrawGlyphs@Base 7.10
- vgDrawImage@Base 7.8.1
- vgDrawPath@Base 7.8.1
- vgFillMaskLayer@Base 7.10
- vgFinish@Base 7.8.1
- vgFlush@Base 7.8.1
- vgGaussianBlur@Base 7.8.1
- vgGetColor@Base 7.8.1
- vgGetError@Base 7.8.1
- vgGetImageSubData@Base 7.8.1
- vgGetMatrix@Base 7.8.1
- vgGetPaint@Base 7.8.1
- vgGetParameterVectorSize@Base 7.8.1
- vgGetParameterf@Base 7.8.1
- vgGetParameterfv@Base 7.8.1
- vgGetParameteri@Base 7.8.1
- vgGetParameteriv@Base 7.8.1
- vgGetParent@Base 7.8.1
- vgGetPathCapabilities@Base 7.8.1
- vgGetPixels@Base 7.8.1
- vgGetString@Base 7.8.1
- vgGetVectorSize@Base 7.8.1
- vgGetf@Base 7.8.1
- vgGetfv@Base 7.8.1
- vgGeti@Base 7.8.1
- vgGetiv@Base 7.8.1
- vgHardwareQuery@Base 7.8.1
- vgImageSubData@Base 7.8.1
- vgInterpolatePath@Base 7.8.1
- vgLoadIdentity@Base 7.8.1
- vgLoadMatrix@Base 7.8.1
- vgLookup@Base 7.8.1
- vgLookupSingle@Base 7.8.1
- vgMask@Base 7.8.1
- vgModifyPathCoords@Base 7.8.1
- vgMultMatrix@Base 7.8.1
- vgPaintPattern@Base 7.8.1
- vgPathBounds@Base 7.8.1
- vgPathLength@Base 7.8.1
- vgPathTransformedBounds@Base 7.8.1
- vgPointAlongPath@Base 7.8.1
- vgReadPixels@Base 7.8.1
- vgRemovePathCapabilities@Base 7.8.1
- vgRenderToMask@Base 7.10
- vgRotate@Base 7.8.1
- vgScale@Base 7.8.1
- vgSeparableConvolve@Base 7.8.1
- vgSetColor@Base 7.8.1
- vgSetGlyphToImage@Base 7.10
- vgSetGlyphToPath@Base 7.10
- vgSetPaint@Base 7.8.1
- vgSetParameterf@Base 7.8.1
- vgSetParameterfv@Base 7.8.1
- vgSetParameteri@Base 7.8.1
- vgSetParameteriv@Base 7.8.1
- vgSetPixels@Base 7.8.1
- vgSetf@Base 7.8.1
- vgSetfv@Base 7.8.1
- vgSeti@Base 7.8.1
- vgSetiv@Base 7.8.1
- vgShear@Base 7.8.1
- vgTransformPath@Base 7.8.1
- vgTranslate@Base 7.8.1
- vgWritePixels@Base 7.8.1
